--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>DEWAKOIN99 : Situs Terpercaya No #1 Indonesia</title>
-    <meta name="description" content="DEWAKOIN99 adalah situs terpercaya #1 dan merupakan partner official dari berbagai provider terbaik di dunia.">
+	<title>dewakoin99property || gudangnya para gamers || dewakoin99property</title>
+    <meta name="description" content="dewakoin99property adalah Gudang Dunia bagi para gamers untuk melatih keterampilannya.">
     <meta name="keywords" content="DEWAKOIN99, DEWAKOIN99 login, link alternatif DEWAKOIN99, DEWAKOIN99 rtp">
     <meta name="author" content="DEWAKOIN99">
 	<meta name="robots" content="index, follow"/>
     <meta content="website" property="og:type">
 	<meta property="og:site_name" content="DEWAKOIN99"/>
-    <meta content="DEWAKOIN99 : Situs Terpercaya No #1 Indonesia" property="og:title">
-    <meta content="DEWAKOIN99 adalah situs terpercaya #1 dan merupakan partner official dari berbagai provider terbaik di dunia." property="og:description">
-    <meta content="https://dwk99amp.com/" property="og:url">
+    <meta content="dewakoin99property || gudangnya para gamers || dewakoin99property" property="og:title">
+    <meta content="dewakoin99property adalah Gudang Dunia bagi para gamers untuk melatih keterampilannya." property="og:description">
+    <meta content="https://dewakoin99property.pages.dev/" property="og:url">
 	<meta property="og:locale" content="id_ID"/>
     <meta name="geo.country" content="ID"/>
     <meta name="language" content="ID"/>
     <meta name="tgn.nation" content="Indonesia"/>
     <meta name="rating" content="general"/>
-	<link rel="amphtml" href="https://dwk99amp.com/"/>
-	<link rel="canonical" href="https://dewakoin99-ofc.com/"/>
+	<link rel="amphtml" href="https://dewakoin99property.pages.dev/"/>
+	<link rel="canonical" href="https://dewakoin99property.tumblr.com/"/>
 	<link rel="icon" href="assets/images/favicon.png" type="image/png" sizes="16x16">
 	
     <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
